<resources>
    <string name="app_name">crudlibro</string>

    <string name="srt_presentacion">Aplicacion desarrollada con la finalidad de aprobar la materia Desarrollo De Aplicaciones Moviles del Instituto N°27. Desarrollada por Frank Mansilla, 2024.</string>


    <string name="str_btnbuscar">Buscar Libro</string>
    <string name="str_btnregistrar">Registrar Libro</string>
    <string name="str_btnlistar">Listar Libros</string>
    <string name="str_btnlistar2">Listar Libros (Recicler View)</string>
    <string name="str_btntutorial">Tutorial</string>


    <string name="str_titulo">Título</string>
    <string name="str_subtitulo">Subtítulo</string>
    <string name="str_autor">Autor</string>
    <string name="str_anio_publicacion">Año Publicación</string>
    <string name="str_precio">Precio</string>

    <string name="str_btnGuardar">Guardar Libro</string>
    <string name="str_btnModificar">Editar Libro</string>
    <string name="str_btnEliminar">Eliminar Libro</string>


    <string name="str_bienvenido">Bienvenidos</string>
    <string name="str_description_imagen">Todo</string>
    <string name="str_listarLibros">Lista de Libros</string>
    <string name="str_gestionLibros">Gestión de Libros</string>
    <string name="str_buscarLibros">Buscar Libro x título</string>
    <string name="str_digitetititulo">Digite el título a buscar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>